# go/api.go
@@ -23,6 +23,12 @@ import (
 type KindsAPIRouter interface { 
 	GetKinds(http.ResponseWriter, *http.Request)
 }
+// ResourceAPIRouter defines the required methods for binding the api requests to a responses for the ResourceAPI
+// The ResourceAPIRouter implementation should parse necessary information from the http request,
+// pass the data to a ResourceAPIServicer to perform the required actions, then write the service results to the http response.
+type ResourceAPIRouter interface { 
+	GetParameters(http.ResponseWriter, *http.Request)
+}
 
 
 // KindsAPIServicer defines the api actions for the KindsAPI service
@@ -31,4 +37,13 @@ type KindsAPIRouter interface {
 // and updated with the logic required for the API.
 type KindsAPIServicer interface { 
 	GetKinds(context.Context) (ImplResponse, error)
+}
+
+
+// ResourceAPIServicer defines the api actions for the ResourceAPI service
+// This interface intended to stay up to date with the openapi yaml used to generate it,
+// while the service implementation can be ignored with the .openapi-generator-ignore file
+// and updated with the logic required for the API.
+type ResourceAPIServicer interface { 
+	GetParameters(context.Context, string, string) (ImplResponse, error)
 }
