# go/model_item.go
@@ -1,0 +1,33 @@
+/*
+ * Swagger K8S Quartermaster - OpenAPI 3.0
+ *
+ * This is the API design of the K8S quartermaster tool, the goal is to effectively obtain K8S resources, which can then be used for YAML configurations or other pruposes.  Some useful links: - [Swagger](https://swagger.io/) - [Kubernetes](https://kubernetes.io/docs/concepts/configuration/)
+ *
+ * API version: 0.0.1
+ * Contact: rik.van.brakel@sue.nl
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+
+
+
+type Item struct {
+
+	Default string `json:"Default,omitempty"`
+
+	ResourceReference string `json:"ResourceReference,omitempty"`
+
+	Type string `json:"Type,omitempty"`
+}
+
+// AssertItemRequired checks if the required fields are not zero-ed
+func AssertItemRequired(obj Item) error {
+	return nil
+}
+
+// AssertItemConstraints checks if the values respects the defined constraints
+func AssertItemConstraints(obj Item) error {
+	return nil
+}
