# go/model_parameter.go
@@ -1,0 +1,46 @@
+/*
+ * Swagger K8S Quartermaster - OpenAPI 3.0
+ *
+ * This is the API design of the K8S quartermaster tool, the goal is to effectively obtain K8S resources, which can then be used for YAML configurations or other pruposes.  Some useful links: - [Swagger](https://swagger.io/) - [Kubernetes](https://kubernetes.io/docs/concepts/configuration/)
+ *
+ * API version: 0.0.1
+ * Contact: rik.van.brakel@sue.nl
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+
+
+
+type Parameter struct {
+
+	Name string `json:"Name,omitempty"`
+
+	Description string `json:"Description,omitempty"`
+
+	Type string `json:"Type,omitempty"`
+
+	Required bool `json:"Required,omitempty"`
+
+	Default string `json:"Default,omitempty"`
+
+	ResourceReference string `json:"ResourceReference,omitempty"`
+
+	Items []Item `json:"Items,omitempty"`
+}
+
+// AssertParameterRequired checks if the required fields are not zero-ed
+func AssertParameterRequired(obj Parameter) error {
+	for _, el := range obj.Items {
+		if err := AssertItemRequired(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
+
+// AssertParameterConstraints checks if the values respects the defined constraints
+func AssertParameterConstraints(obj Parameter) error {
+	return nil
+}
