# go/model_resource.go
@@ -1,0 +1,44 @@
+/*
+ * Swagger K8S Quartermaster - OpenAPI 3.0
+ *
+ * This is the API design of the K8S quartermaster tool, the goal is to effectively obtain K8S resources, which can then be used for YAML configurations or other pruposes.  Some useful links: - [Swagger](https://swagger.io/) - [Kubernetes](https://kubernetes.io/docs/concepts/configuration/)
+ *
+ * API version: 0.0.1
+ * Contact: rik.van.brakel@sue.nl
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+
+
+
+type Resource struct {
+
+	FullResourceName string `json:"FullResourceName,omitempty"`
+
+	Path string `json:"Path,omitempty"`
+
+	Name string `json:"Name,omitempty"`
+
+	Description string `json:"Description,omitempty"`
+
+	Type string `json:"Type,omitempty"`
+
+	Parameters []Parameter `json:"Parameters,omitempty"`
+}
+
+// AssertResourceRequired checks if the required fields are not zero-ed
+func AssertResourceRequired(obj Resource) error {
+	for _, el := range obj.Parameters {
+		if err := AssertParameterRequired(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
+
+// AssertResourceConstraints checks if the values respects the defined constraints
+func AssertResourceConstraints(obj Resource) error {
+	return nil
+}
